[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Pause.gd" type="Script" id=1]
[ext_resource path="res://Game Paused.png" type="Texture" id=2]
[ext_resource path="res://spot.png" type="Texture" id=3]
[ext_resource path="res://light.png" type="Texture" id=4]
[ext_resource path="res://CarterOne-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0, 0, 105, 0, 105, 25, 0, 25 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Light" type="Sprite" parent="."]
position = Vector2( 483, 78 )
scale = Vector2( 0.421875, 0.421875 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="Light"]
scale = Vector2( 1.45148, 1.45148 )
texture = ExtResource( 4 )
texture_scale = 1.44
energy = 0.86
shadow_enabled = true
shadow_filter = 4
shadow_filter_smooth = 2.9

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="GamePaused" type="Sprite" parent="CanvasModulate"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
light_mask = 2
position = Vector2( 523, 145 )
scale = Vector2( 0.190726, 0.190726 )
texture = ExtResource( 2 )

[node name="Resume" type="Button" parent="."]
margin_left = 456.0
margin_top = 279.0
margin_right = 561.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="LightOccluder2D" type="LightOccluder2D" parent="Resume"]
occluder = SubResource( 1 )

[node name="Menu" type="Button" parent="."]
margin_left = 455.0
margin_top = 340.0
margin_right = 560.0
margin_bottom = 365.0
hint_tooltip = "WARNING: you will lose all progress in the game if you return to the menu"
custom_fonts/font = SubResource( 3 )
text = "Menu"

[node name="LightOccluder2D" type="LightOccluder2D" parent="Menu"]
occluder = SubResource( 1 )

[node name="Quit" type="Button" parent="."]
margin_left = 456.0
margin_top = 398.0
margin_right = 561.0
margin_bottom = 423.0
hint_tooltip = "WARNING: you will lose all progress in the game if you quit the game"
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="LightOccluder2D" type="LightOccluder2D" parent="Quit"]
occluder = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.596078, 0.596078, 0.596078, 0.764706 )

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
